# bscs1-cprog2-activities

./: pyproject.toml
module2/: math_basics.py  tatlong_bibe.py  your_thoughts.py  your_types.py
module3/: area_of_the_circle.py  compute_general_average.py  salary.py  three_variables.py
tkinter/calculator/: main.py
tkinter/form/: main.py
tkinter/form/lib/: window.py
tkinter/menu/: main.py
tkinter/menu/lib/: __init__.py
tkinter/primarycolor/: main.py
tkinter/primarycolor/lib/: __init__.py  window.py
